Fix animation on mobile

--- a/layouts/partials/css/min600px.css
+++ b/layouts/partials/css/min600px.css
@@ -1,7 +1,3 @@
-/* Home page should be centered */
-body.home {
-  justify-content: center;
-}
 .non-narrow.zero-top-spacing {
 padding-top: 0 !important;
 }
